# amazonas-code

./: pyproject.toml
src/amazonas/: polygonize.py
src/amazonas_code/: loading.py  names.py
