[tool.poetry]
name = "amazonas-code"
version = "0.1.0"
description = ""
authors = ["Rodolfo Figueroa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^1.0.1"
rasterio = "^1.3.11"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
networkx = "^3.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
